# binpocket

./: Cargo.toml  Makefile  README.md  binpocket.yaml  build.rs  default.nix  flake.nix  shell.nix
binpocket/: Cargo.toml
binpocket/src/: main.rs  repository.rs
binpocket/src/auth/: principal.rs  resource.rs
bp_protos/: Cargo.toml  build.rs
bp_protos/protos/: repository.proto  ulid.proto
bp_protos/src/: lib.rs
fbs/: manifest.fbs
nix/modules/: binpocket.nix
oci/: Cargo.toml
oci/resources/test/: v2_manifest.json
oci/src/: digest.rs  error.rs  lib.rs  manifest.rs  scanner.rs
oci/src/auth/: mod.rs
protos/: manifest.proto  ulid.proto
src/: binpocket.rs  blob.rs  digest.rs  error.rs  lock.rs  main.rs  manifest.proto  manifest.rs  manifest_generated.rs  range.rs  read_util.rs  repository.proto  repository.rs  ulid.rs  uuid.proto  uuid.rs
src/auth/: credential.rs  mod.rs  principal.rs  resource.rs
